--- a/archives/toutiao-search/2023-10-29.md
+++ b/archives/toutiao-search/2023-10-29.md
@@ -1,53 +1,77 @@
 # 2023-10-29
 
-共 297 条
+共 319 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 29 2023 16:00:58 GMT+0800 (China Standard Time) -->
-1. [长沙未成年人持械斗殴14人被抓](https://so.toutiao.com/search?keyword=长沙未成年人持械斗殴14人被抓)
+<!-- 最后更新时间 Sun Oct 29 2023 17:00:47 GMT+0800 (China Standard Time) -->
 1. [小米6被刷入魔改澎湃OS：很流畅](https://so.toutiao.com/search?keyword=小米6被刷入魔改澎湃OS：很流畅)
-1. [秋收已过八成半 秋种有序推进](https://so.toutiao.com/search?keyword=秋收已过八成半+秋种有序推进)
-1. [大批上海人的赴日本签证被终止](https://so.toutiao.com/search?keyword=大批上海人的赴日本签证被终止)
+1. [长沙未成年人持械斗殴14人被抓](https://so.toutiao.com/search?keyword=长沙未成年人持械斗殴14人被抓)
+1. [杭州亚残运会十大难忘瞬间](https://so.toutiao.com/search?keyword=杭州亚残运会十大难忘瞬间)
+1. [全国多地马拉松鸣枪开赛](https://so.toutiao.com/search?keyword=全国多地马拉松鸣枪开赛)
 1. [我国平均每20多秒有人死于中风](https://so.toutiao.com/search?keyword=我国平均每20多秒有人死于中风)
 1. [以色列军队向加沙两地发起进攻](https://so.toutiao.com/search?keyword=以色列军队向加沙两地发起进攻)
 1. [代号“1027行动” 缅北激战持续](https://so.toutiao.com/search?keyword=代号“1027行动”+缅北激战持续)
+1. [中央纪委：立案行贿人员1.2万人](https://so.toutiao.com/search?keyword=中央纪委：立案行贿人员1.2万人)
+1. [多省份辟谣“推行工龄退休”](https://so.toutiao.com/search?keyword=多省份辟谣“推行工龄退休”)
 1. [女子连吃3个月胡萝卜变“小橘人”](https://so.toutiao.com/search?keyword=女子连吃3个月胡萝卜变“小橘人”)
-1. [全国多地马拉松鸣枪开赛](https://so.toutiao.com/search?keyword=全国多地马拉松鸣枪开赛)
+1. [埃尔多安：以军加沙行动是大屠杀](https://so.toutiao.com/search?keyword=埃尔多安：以军加沙行动是大屠杀)
+1. [以轰炸加沙北部 哈马斯袭以装甲车](https://so.toutiao.com/search?keyword=以轰炸加沙北部+哈马斯袭以装甲车)
+1. [挺以色列？特朗普警告“美国敌人”](https://so.toutiao.com/search?keyword=挺以色列？特朗普警告“美国敌人”)
+1. [巴勒斯坦：以色列没有遵守停火决议](https://so.toutiao.com/search?keyword=巴勒斯坦：以色列没有遵守停火决议)
+1. [哈马斯：对美国加入战斗始料未及](https://so.toutiao.com/search?keyword=哈马斯：对美国加入战斗始料未及)
+1. [大批上海人的赴日本签证被终止](https://so.toutiao.com/search?keyword=大批上海人的赴日本签证被终止)
+1. [海湾国家对以色列发出集体警告](https://so.toutiao.com/search?keyword=海湾国家对以色列发出集体警告)
+1. [哈马斯在加沙领导人冲突后首度发声](https://so.toutiao.com/search?keyword=哈马斯在加沙领导人冲突后首度发声)
+1. [院士谈如何预测脑卒中遗传风险](https://so.toutiao.com/search?keyword=院士谈如何预测脑卒中遗传风险)
+1. [男子砍伤同学未受处罚 公安局被判赔](https://so.toutiao.com/search?keyword=男子砍伤同学未受处罚+公安局被判赔)
+1. [全红婵回广东游万绿湖](https://so.toutiao.com/search?keyword=全红婵回广东游万绿湖)
+1. [以军加沙作战视频：坦克密布](https://so.toutiao.com/search?keyword=以军加沙作战视频：坦克密布)
+1. [男童被生母虐待致残后以为妈妈病了](https://so.toutiao.com/search?keyword=男童被生母虐待致残后以为妈妈病了)
+1. [金价再度突破600元大关 谁在抢购](https://so.toutiao.com/search?keyword=金价再度突破600元大关+谁在抢购)
+1. [南京一路面持续喷涌红褐色不明物质](https://so.toutiao.com/search?keyword=南京一路面持续喷涌红褐色不明物质)
+1. [台学生“只穿内裤”联谊 校方回应](https://so.toutiao.com/search?keyword=台学生“只穿内裤”联谊+校方回应)
+1. [院士：环境污染增加中风风险](https://so.toutiao.com/search?keyword=院士：环境污染增加中风风险)
+1. [女孩戴鲨鱼夹摔倒划破头皮缝3针](https://so.toutiao.com/search?keyword=女孩戴鲨鱼夹摔倒划破头皮缝3针)
+1. [朋友托付家产 贵重物品竟是矿泉水](https://so.toutiao.com/search?keyword=朋友托付家产+贵重物品竟是矿泉水)
+1. [牛发狂撞飞打牌村民](https://so.toutiao.com/search?keyword=牛发狂撞飞打牌村民)
+1. [伤者具体有多少？深圳欢乐谷回应](https://so.toutiao.com/search?keyword=伤者具体有多少？深圳欢乐谷回应)
+1. [“鼻吸能量棒”真的无毒无害吗](https://so.toutiao.com/search?keyword=“鼻吸能量棒”真的无毒无害吗)
+1. [官方通报“男子同时迎娶两个新娘”](https://so.toutiao.com/search?keyword=官方通报“男子同时迎娶两个新娘”)
+1. [媒体：保罗让库里不再“一心二用”](https://so.toutiao.com/search?keyword=媒体：保罗让库里不再“一心二用”)
+1. [中国代表团创亚残运会历史最好成绩](https://so.toutiao.com/search?keyword=中国代表团创亚残运会历史最好成绩)
+1. [曝以军或用新武器对付哈马斯地道](https://so.toutiao.com/search?keyword=曝以军或用新武器对付哈马斯地道)
+1. [老友记六人组不完整了](https://so.toutiao.com/search?keyword=老友记六人组不完整了)
+1. [钟南山：恶性肺结节早干预像割脓包](https://so.toutiao.com/search?keyword=钟南山：恶性肺结节早干预像割脓包)
+1. [预示癌症的20个表现](https://so.toutiao.com/search?keyword=预示癌症的20个表现)
+1. [从一碗米饭看粮食品质升级](https://so.toutiao.com/search?keyword=从一碗米饭看粮食品质升级)
+1. [巴方称冲突致加沙地带超8000人丧生](https://so.toutiao.com/search?keyword=巴方称冲突致加沙地带超8000人丧生)
+1. [你还相信头部主播的全网最低价吗](https://so.toutiao.com/search?keyword=你还相信头部主播的全网最低价吗)
+1. [何立峰：保障性住房不得上市交易](https://so.toutiao.com/search?keyword=何立峰：保障性住房不得上市交易)
+1. [《五朵金花》阿鹏哥扮演者去世](https://so.toutiao.com/search?keyword=《五朵金花》阿鹏哥扮演者去世)
+1. [小孩在猫咖被吓哭父亲将猫踹下楼](https://so.toutiao.com/search?keyword=小孩在猫咖被吓哭父亲将猫踹下楼)
+1. [女子酒杯投毒杀害男友潜逃27年落网](https://so.toutiao.com/search?keyword=女子酒杯投毒杀害男友潜逃27年落网)
+1. [我国首台国产海上平台燃气轮机投用](https://so.toutiao.com/search?keyword=我国首台国产海上平台燃气轮机投用)
+1. [商务车撞倒男孩致其身亡司机被刑拘](https://so.toutiao.com/search?keyword=商务车撞倒男孩致其身亡司机被刑拘)
+1. [网友称在瑞幸咖啡中喝出员工工牌](https://so.toutiao.com/search?keyword=网友称在瑞幸咖啡中喝出员工工牌)
+1. [武汉市和平大道南延隧道建成通车](https://so.toutiao.com/search?keyword=武汉市和平大道南延隧道建成通车)
+1. [秋收已过八成半 秋种有序推进](https://so.toutiao.com/search?keyword=秋收已过八成半+秋种有序推进)
 1. [南海风云：中美航母“相揖别”](https://so.toutiao.com/search?keyword=南海风云：中美航母“相揖别”)
 1. [南京任仲琅旧居发生火灾？不实](https://so.toutiao.com/search?keyword=南京任仲琅旧居发生火灾？不实)
-1. [埃尔多安：以军加沙行动是大屠杀](https://so.toutiao.com/search?keyword=埃尔多安：以军加沙行动是大屠杀)
-1. [哈马斯：对美国加入战斗始料未及](https://so.toutiao.com/search?keyword=哈马斯：对美国加入战斗始料未及)
 1. [以色列南部城市一房屋遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列南部城市一房屋遭火箭弹袭击)
-1. [巴勒斯坦：以色列没有遵守停火决议](https://so.toutiao.com/search?keyword=巴勒斯坦：以色列没有遵守停火决议)
-1. [挺以色列？特朗普警告“美国敌人”](https://so.toutiao.com/search?keyword=挺以色列？特朗普警告“美国敌人”)
-1. [台学生“只穿内裤”联谊 校方回应](https://so.toutiao.com/search?keyword=台学生“只穿内裤”联谊+校方回应)
-1. [以军加沙作战视频：坦克密布](https://so.toutiao.com/search?keyword=以军加沙作战视频：坦克密布)
 1. [美国多地枪案致多人伤亡 中使馆提醒](https://so.toutiao.com/search?keyword=美国多地枪案致多人伤亡+中使馆提醒)
-1. [院士谈如何预测脑卒中遗传风险](https://so.toutiao.com/search?keyword=院士谈如何预测脑卒中遗传风险)
-1. [全红婵回广东游万绿湖](https://so.toutiao.com/search?keyword=全红婵回广东游万绿湖)
-1. [男童被生母虐待致残后以为妈妈病了](https://so.toutiao.com/search?keyword=男童被生母虐待致残后以为妈妈病了)
-1. [南京一路面持续喷涌红褐色不明物质](https://so.toutiao.com/search?keyword=南京一路面持续喷涌红褐色不明物质)
-1. [官方通报“男子同时迎娶两个新娘”](https://so.toutiao.com/search?keyword=官方通报“男子同时迎娶两个新娘”)
-1. [女孩戴鲨鱼夹摔倒划破头皮缝3针](https://so.toutiao.com/search?keyword=女孩戴鲨鱼夹摔倒划破头皮缝3针)
 1. [欧盟内部就巴以冲突公开交锋](https://so.toutiao.com/search?keyword=欧盟内部就巴以冲突公开交锋)
-1. [伤者具体有多少？深圳欢乐谷回应](https://so.toutiao.com/search?keyword=伤者具体有多少？深圳欢乐谷回应)
 1. [美军空袭叙利亚境内目标只是报复吗](https://so.toutiao.com/search?keyword=美军空袭叙利亚境内目标只是报复吗)
 1. [醉酒乘客与司机争执躺路上被撞身亡](https://so.toutiao.com/search?keyword=醉酒乘客与司机争执躺路上被撞身亡)
 1. [设备厂家分析深圳过山车事故](https://so.toutiao.com/search?keyword=设备厂家分析深圳过山车事故)
 1. [商务车与自行车相撞致9岁男孩身亡](https://so.toutiao.com/search?keyword=商务车与自行车相撞致9岁男孩身亡)
-1. [金价再度突破600元大关 谁在抢购](https://so.toutiao.com/search?keyword=金价再度突破600元大关+谁在抢购)
 1. [专家：加沙巷战难打 坦克施展不开](https://so.toutiao.com/search?keyword=专家：加沙巷战难打+坦克施展不开)
 1. [曝美沙担忧巴以冲突扩大为地区战争](https://so.toutiao.com/search?keyword=曝美沙担忧巴以冲突扩大为地区战争)
 1. [哈尔滨居民家煤气罐爆炸致1死4伤](https://so.toutiao.com/search?keyword=哈尔滨居民家煤气罐爆炸致1死4伤)
 1. [特斯拉停路边被倒满垃圾](https://so.toutiao.com/search?keyword=特斯拉停路边被倒满垃圾)
-1. [预示癌症的20个表现](https://so.toutiao.com/search?keyword=预示癌症的20个表现)
 1. [巴西：将讨论参与共建“一带一路”](https://so.toutiao.com/search?keyword=巴西：将讨论参与共建“一带一路”)
-1. [钟南山：恶性肺结节早干预像割脓包](https://so.toutiao.com/search?keyword=钟南山：恶性肺结节早干预像割脓包)
 1. [陆虎说快男时期看张杰非常不顺眼](https://so.toutiao.com/search?keyword=陆虎说快男时期看张杰非常不顺眼)
-1. [朋友托付家产 贵重物品竟是矿泉水](https://so.toutiao.com/search?keyword=朋友托付家产+贵重物品竟是矿泉水)
 1. [日本GDP将跌至全球第四意味着什么](https://so.toutiao.com/search?keyword=日本GDP将跌至全球第四意味着什么)
 1. [女子酒驾被查：你要罚了我就得离婚](https://so.toutiao.com/search?keyword=女子酒驾被查：你要罚了我就得离婚)
-1. [以轰炸加沙北部 哈马斯袭以装甲车](https://so.toutiao.com/search?keyword=以轰炸加沙北部+哈马斯袭以装甲车)
 1. [宋佳为《白塔之光》打call](https://so.toutiao.com/search?keyword=宋佳为《白塔之光》打call)
 1. [沈腾故意挡杨幂镜头](https://so.toutiao.com/search?keyword=沈腾故意挡杨幂镜头)
 1. [吉利银河E8实车细节亮相](https://so.toutiao.com/search?keyword=吉利银河E8实车细节亮相)
@@ -59,7 +83,6 @@
 1. [家属要求以色列政府解救人质](https://so.toutiao.com/search?keyword=家属要求以色列政府解救人质)
 1. [镇政府回应包村干部酒后打人](https://so.toutiao.com/search?keyword=镇政府回应包村干部酒后打人)
 1. [瓦努阿图群岛发生6.2级地震](https://so.toutiao.com/search?keyword=瓦努阿图群岛发生6.2级地震)
-1. [院士：环境污染增加中风风险](https://so.toutiao.com/search?keyword=院士：环境污染增加中风风险)
 1. [醉汉滋事 警员一招制服](https://so.toutiao.com/search?keyword=醉汉滋事+警员一招制服)
 1. [11岁孩子玩手游刷走奶奶5万退休金](https://so.toutiao.com/search?keyword=11岁孩子玩手游刷走奶奶5万退休金)
 1. [河北多地高速站口临时关闭](https://so.toutiao.com/search?keyword=河北多地高速站口临时关闭)
@@ -78,7 +101,6 @@
 1. [崔天凯：美国需尊重中国](https://so.toutiao.com/search?keyword=崔天凯：美国需尊重中国)
 1. [以军发行动预告要求加沙人向南转移](https://so.toutiao.com/search?keyword=以军发行动预告要求加沙人向南转移)
 1. [男子13万元出售劳力士交易时被调包](https://so.toutiao.com/search?keyword=男子13万元出售劳力士交易时被调包)
-1. [小孩在猫咖被吓哭父亲将猫踹下楼](https://so.toutiao.com/search?keyword=小孩在猫咖被吓哭父亲将猫踹下楼)
 1. [央媒：把课间10分钟还给学生](https://so.toutiao.com/search?keyword=央媒：把课间10分钟还给学生)
 1. [普京回应“月球-25”号坠毁事故](https://so.toutiao.com/search?keyword=普京回应“月球-25”号坠毁事故)
 1. [乌克兰基辅拉响防空警报](https://so.toutiao.com/search?keyword=乌克兰基辅拉响防空警报)
